fix bio page spacing

--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -5,6 +5,11 @@
     padding: 0 30px;
     margin: 0 auto;
     overflow: auto;
+
+    ul{
+        margin-left: 2rem;
+        margin-bottom: 2rem;
+    }
 }
 
 .contact-info{
