--- a/scss/style.scss
+++ b/scss/style.scss
@@ -353,6 +353,10 @@ p {
 }
 
 
+.bio-box{
+    margin-bottom: 5rem;
+}
+
 @import 'utility';
 @import 'buttons';
 @import 'mobile';
